tests/parser/bad/exps/exp_t-builtin-id-with.scilexp
let one = Uint128 1 in
(* 'One' is an invalid identifier *)
builtin add One One
